--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-CONNECTION_URI=mongodb+srv://staff_admin:idjXGEXC4BWUdx0l@cluster0.nh8wkod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# CONNECTION_URI=mongodb+srv://staff_admin:idjXGEXC4BWUdx0l@cluster0.nh8wkod.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CONNECTION_URI=mongodb+srv://staff_admin:idjXGEXC4BWUdx0l@cluster0.nh8wkod.mongodb.net/Notif?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 JWT_SECRET=11235813213456789012345
